<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_content"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:paddingLeft="10dp"
			android:paddingRight="10dp">
			<EditText
				android:id="@+id/signup_username"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/username_hint"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:inputType="text" />
			<EditText
				android:id="@+id/signup_password"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password_hint"
				android:inputType="textPassword"
				android:layout_marginBottom="10dp" />
			<EditText
				android:id="@+id/signup_password_confirm"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/confirm_password_hint"
				android:inputType="textPassword"
				android:layout_marginBottom="10dp" />
			<EditText
				android:id="@+id/signup_email"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/email_hint"
				android:inputType="textEmailAddress"
				android:layout_marginBottom="10dp" />
			<CheckBox
				android:id="@+id/signup_terms"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:layout_marginBottom="10dp"
				android:paddingLeft="50dp" />
			<Button
				android:id="@+id/button_signup"
				android:text="@string/signup_action"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>