<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="10dp"
	android:orientation="vertical">
	<EditText
		android:id="@+id/email"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/email_hint"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:inputType="text" />
	<EditText
		android:id="@+id/password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/password_hint"
		android:inputType="textPassword"
		android:layout_marginBottom="10dp" />
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button
			android:id="@+id/button_login"
			android:text="@string/login"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1" />
		<Button
			android:id="@+id/button_signup"
			android:text="@string/signup"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:layout_marginLeft="8dp" />
	</LinearLayout>
</LinearLayout>