<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="Welcome to Tactical Automata"
		android:textSize="18pt" />
	<Button
		android:id="@+id/button_login_signup"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="Login or sign up" />
	<Button
		android:id="@+id/button_store"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/store" />
	<Button
		android:id="@+id/button_profile"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/profile" />
	<Button
		android:id="@+id/button_decks"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/manage_decks" />
</LinearLayout>